# EditPDF

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  document.py  history.py  image_service.py  main.py  models.py  pdf_service.py  stream_editor.py  text_service.py
frontend/: app.js  index.html  style.css
