[project]
name = "editpdf"
version = "0.1.0"
description = "Local Docker-hosted PDF editor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pymupdf>=1.25.0",
    "python-multipart>=0.0.18",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # function-call-in-default-argument (standard FastAPI pattern)
    "B904",   # raise-without-from-inside-except (intentional in FastAPI handlers)
]
